tests/ui/resolve/issue-10200.stderr
error[E0532]: expected tuple struct or tuple variant, found function `foo`
  --> $DIR/issue-10200.rs:6:9
   |
LL | struct Foo(bool);
   | ----------------- similarly named tuple struct `Foo` defined here
...
LL |         foo(x)
   |         ^^^ help: a tuple struct with a similar name exists (notice the capitalization): `Foo`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0532`.
